<resources>
    <string name="app_name">Share</string>
    <string name="send">SEND</string>
    <string name="select_file">Choose a File</string>
    <string name="ip_address">IP Address</string>
    <string name="icon">icon</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="exit">Exit</string>
    <string name="reset">RESET</string>
    <string name="connected">Connected</string>
    <string name="finish">FINISHED</string>
    <string name="initializing">Initializing</string>
    <string name="transferring">Transferring</string>
</resources>